refactor: elimine los paquetes, fragments e items inecesarios

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="inmuebles">Inmuebles</string>
     <string name="inquilinos">Inquilinos</string>
     <string name="perfil">Perfil</string>
+    <string name="ubicacion">Ubicacion</string>
 </resources>
