feat: agregue estilos, colores y bordes estilo Material Design

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
+
 <resources>
     <string name="app_name">inmobiliaria-movil</string>
     <string name="title_activity_menu">MenuActivity</string>
@@ -17,4 +18,21 @@
     <string name="inquilinos">Inquilinos</string>
     <string name="perfil">Perfil</string>
     <string name="ubicacion">Ubicacion</string>
+    <string name="agregar_inmueble">Agregar Inmueble</string>
+    <string name="title_lista_inmuebles">Lista Inmuebles</string>
+    <string name="mas_opciones">Mas Opciones</string>
+    <string name="imagen_inmueble">imagen inmueble\n</string>
+    <string name="direccion_inmueble">Direccion Inmueble</string>
+    <string name="foto_perfil">Foto de perfil</string>
+    <string name="perfil_propietario">Perfil del Propietario</string>
+    <string name="dni">DNI</string>
+    <string name="nombre">Nombre</string>
+    <string name="apellido">Apellido</string>
+    <string name="correo_electronico">Correo electrónico</string>
+    <string name="telefono">Teléfono</string>
+    <string name="editar">Editar</string>
+    <string name="cambiar_contraseña">Cambiar contraseña</string>
+    <string name="perfil_subtitulo">Edita tu perfil facilmente!</string>
+    <string name="guardar">Guardar</string>
+    <string name="contraseña_actual">Contraseña actual</string>
 </resources>
